--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.11.0",
     "react-datepicker": "^2.10.0",
     "react-dom": "^16.11.0",
+    "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
